--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
       <button id="btnBackGame">🔙 Menu</button>
     </div>
   </div>
-
+  
+<div id="onlineGame" style="display:none">
+  <div id="turnIndicatorOnline">Giliran: Menunggu...</div>
+  <div id="boardOnline"></div>
+  <div class="controls">
+    <button id="rollBtnOnline">🎲 Lempar Dadu</button>
+    <div id="diceOnline">🎲</div>
+    <button id="btnBackOnline">🔙 Menu</button>
+  </div>
+  
+</div>
   <div id="statScreen" style="display:none">
     <h2>📊 Statistik</h2>
     <pre id="statText"></pre>
