--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2 id="greeting">Halo, Guest!</h2>
     <button id="btnLocal">🎲 Main Lokal</button>
     <button id="btnOnline">🌐 Main Online</button>
+    <button id="btnBot">🤖 Main VS Bot</button>
     <button id="btnStatistik">📊 Statistik</button>
     <button id="btnLeaderboard">📶 Leaderboard</button>
     <button id="btnGantiNickname">✏ Ganti Nickname</button>
