--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="btnGantiNickname">✏ Ganti Nickname</button>
   </div>
 
-  <div id="game" style="display:none">
+  <div id="game">
     <div id="turnIndicator">Giliran: Pemain 1 🔴</div>
     <div id="board"></div>
     <div class="controls">
@@ -27,67 +27,26 @@
       <button id="btnBackGame">🔙 Menu</button>
     </div>
   </div>
-  
-<div id="onlineGame" style="display:none">
-  <div id="turnIndicatorOnline">Giliran: Menunggu...</div>
-  <div id="boardOnline"></div>
-  <div class="controls">
-    <button id="rollBtnOnline">🎲 Lempar Dadu</button>
-    <div id="diceOnline">🎲</div>
-    <button id="btnBackOnline">🔙 Menu</button>
-  </div>
-  
-</div>
-  <div id="statScreen" style="display:none">
+
+  <div id="statScreen">
     <h2>📊 Statistik</h2>
     <pre id="statText"></pre>
     <button id="btnBackStat">🔙 Kembali</button>
   </div>
 
-  <div id="leaderboardScreen" style="display:none">
+  <div id="leaderboardScreen">
     <h2>📶 Leaderboard</h2>
     <div id="leaderboardList">Loading...</div>
     <button id="btnBackLeaderboard">🔙 Kembali</button>
   </div>
 
-<div id="roomScreen" style="display: none;">
-  <h2>🌐 Multiplayer Online</h2>
-  <p id="roomCodeDisplay"></p>
-  <button id="btnCreateRoom">➕ Buat Room</button>
-  <br><br>
-  <input type="text" id="roomCodeInput" placeholder="Kode Room" />
-  <button id="btnJoinRoomFinal">🔗 Gabung</button>
-  <br><br>
-  <button id="btnBackRoom">🔙 Menu</button>
-</div>
-
-<div id="gameOnline" style="display: none;">
-  <h2>🎮 Ular Tangga Online</h2>
-  <div id="turnIndicatorOnline">Giliran: Pemain 1</div>
-  <div id="boardOnline" class="board"></div>
-  <div class="controls">
-    <button id="rollOnline">🎲 Roll</button>
-    <div id="diceOnline">🎲</div>
-  </div>
-  <button onclick="showMenu()">🔙 Menu</button>
-</div>
   <audio id="diceSound" src="dice-roll.mp3" preload="auto"></audio>
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script src="script.js"></script>
 
-  <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDKBpjaKi4h6m7Jk8syIOzSMz36EqdeyPE",
-    authDomain: "ulartangga-cf5c1.firebaseapp.com",
-    databaseURL: "https://ulartangga-cf5c1-default-rtdb.firebaseio.com",
-    projectId: "ulartangga-cf5c1",
-    storageBucket: "ulartangga-cf5c1.appspot.com",
-    messagingSenderId: "564275947810",
-    appId: "1:564275947810:web:e53cf40ea5d285cf711e2a"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
-  
+  <!-- Script utama -->
+  <script src="script.js"></script>
 </body>
 </html>
