--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ular Tangga Online</title>
+  <title>🎲 Ular Tangga Online</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,10 +12,10 @@
     <h2 id="greeting">Halo, Guest!</h2>
     <button id="btnLocal">🎲 Main Lokal</button>
     <button id="btnOnline">🌐 Main Online</button>
-    <button id="btnBot">🤖 Main VS Bot</button>
+    <button id="btnBot">🤖 VS Bot</button>
     <button id="btnStatistik">📊 Statistik</button>
     <button id="btnLeaderboard">📶 Leaderboard</button>
-    <button id="btnGantiNickname">✏ Ganti Nickname</button>
+    <button id="btnGantiNickname">✏️ Ganti Nickname</button>
   </div>
 
   <div id="game">
@@ -30,7 +30,7 @@
 
   <div id="statScreen">
     <h2>📊 Statistik</h2>
-    <pre id="statText"></pre>
+    <pre id="statText">Loading...</pre>
     <button id="btnBackStat">🔙 Kembali</button>
   </div>
 
@@ -46,7 +46,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-  <!-- Script utama -->
+  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
