--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <div id="menu">
     <h1>🎲 Ular Tangga</h1>
     <h2 id="greeting">Halo, Guest!</h2>
-    <button id="btnLocal">🎲 Main Lokal</button>
+    <button id="btnLocal">🎮 Main Lokal</button>
+    <button id="btnBot">🤖 VS Bot</button>
     <button id="btnOnline">🌐 Main Online</button>
     <button id="btnStatistik">📊 Statistik</button>
     <button id="btnLeaderboard">📶 Leaderboard</button>
     <button id="btnGantiNickname">✏ Ganti Nickname</button>
   </div>
 
-  <div id="game" style="display:none">
+  <div id="game" style="display: none;">
     <div id="turnIndicator">Giliran: Pemain 1 🔴</div>
     <div id="board"></div>
     <div class="controls">
