--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
     <button id="btnBackLeaderboard">🔙 Kembali</button>
   </div>
 
-  <audio id="diceSound" src="dice-roll.mp3" preload="auto"></audio>
+  <div id="roomScreen" style="display:none">
+    <h2>🌐 Multiplayer Online</h2>
+    <button id="btnBackRoom">🔙 Menu</button>
+  </div>
 
-  <!-- Firebase -->
+  <audio id="diceSound" src="dice-roll.mp3" preload="auto"></audio>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  
-  <!-- Script -->
   <script src="script.js"></script>
 </body>
 </html>
